compiled sass, fixed font-family, fixed spacing

--- a/css/banners.scss
+++ b/css/banners.scss
@@ -15,17 +15,17 @@ html, body{
 }
 
 .one {
-  background: url("../img/one.jpg");
+  background: url("/img/one.jpg");
   background-size: cover;
 }
 
 .two {
-  background-image: url("../img/two.jpg");
+  background-image: url("/img/two.jpg");
   background-size: cover
 }
 
 .three {
-  background-image: url("../img/three.jpg");
+  background-image: url("/img/three.jpg");
   background-size: cover
 }
 
@@ -72,10 +72,10 @@ html, body{
 
 .date {
   text-transform: uppercase;
-  font-family: $font-header;
+  font-family: $font-heading;
   letter-spacing: 0.25em;
   font-size: 1em;
-  color: $offwhite;
+  color: $offwhite !important;
 }
 
 .date span{
@@ -84,12 +84,14 @@ html, body{
 }
 
 .heading {
-  font-family: $font-header;
-  font-size: 2.75em;
+  font-family: $font-body;
+  letter-spacing: 1px;
+  transform:scale(1,0.85);
+  font-size: 3em;
   padding: 0.5em;
   text-transform: uppercase; 
   color: #fff !important;
-  padding-bottom: 1em;
+  padding-bottom: 0.75em;
 }
 
 .heading a {
@@ -154,12 +156,12 @@ html, body{
   font-style: normal;
   text-decoration: none;
   box-shadow: none;
-  border: 0.25em solid #000;
+  border: 0.2em solid #000;
   text-transform: uppercase;
   background: #FFF;
   color: #000;
   letter-spacing: 0.25em;
-  padding: 1em 2em;
+  padding: 0.75em 1.25em;
   font-size: 0.75em;
 }
 
